--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     buildFeatures {
         viewBinding true
+    }
+    buildToolsVersion '34.0.0'
+    ndkVersion '21.4.7075529'
+    dependenciesInfo {
+        includeInApk true
+        includeInBundle true
     }
 }
 
