--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
     defaultConfig {
         applicationId "com.example.copy_paste_bank"
         minSdk 24
+        //noinspection OldTargetApi
         targetSdk 34
         versionCode 1
         versionName "1.0"
